--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,22 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
+authors = [{name = "inwonakng", email = "inwon.kang04@gmail.com"}]
+dependencies = ["numpy>=2.2.6,<3", "pandas>=2.3.2,<3", "scikit-learn>=1.7.1,<2", "openml>=0.15.1,<0.16", "ucimlrepo>=0.0.7,<0.0.8", "liac-arff>=2.5.0,<3"]
 name = "tabkit"
-version = "2025.8.22"
-dependencies = [
-    "numpy>=1.26.3",
-    "pandas>=2.2.3",
-    "scikit-learn>=1.6.1",
-    "openml>=0.15.0",
-    "ucimlrepo>=0.0.7",
-    "liac-arff>=2.5.0",
-]
-dev = ["notebook","ipykernel","jupyter"]
-requires-python = ">=3.10"
-authors = [
-  {name = "Inwon Kang", email = "inwon.kang04@gmail.com"},
-]
-maintainers = [
-  {name = "Inwon Kang", email = "inwon.kang04@gmail.com"},
-]
-description = "A utility package for working with tables"
-readme = "README.md"
+requires-python = ">= 3.10"
+version = "0.1.0"
+
+[build-system]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["osx-arm64"]
+
+[tool.pixi.pypi-dependencies]
+tabkit = { path = ".", editable = true }
+
+[tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+python = "3.10.*"
