--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 authors = [{name = "inwonakng", email = "inwon.kang04@gmail.com"}]
-dependencies = ["numpy>=2.2.6,<3", "pandas>=2.3.2,<3", "scikit-learn>=1.7.1,<2", "openml>=0.15.1,<0.16", "ucimlrepo>=0.0.7,<0.0.8", "liac-arff>=2.5.0,<3", "build>=1.3.0,<2", "twine>=6.1.0,<7"]
+dependencies = ["numpy>=2.2.6,<3", "pandas>=2.3.2,<3", "scikit-learn>=1.7.1,<2", "openml>=0.15.1,<0.16", "ucimlrepo>=0.0.7,<0.0.8", "liac-arff>=2.5.0,<3", "build>=1.3.0,<2", "twine>=6.1.0,<7", "pytest>=8.4.1,<9", "pytest-mock>=3.14.1,<4", "pyyaml>=6.0.2,<7"]
 name = "tabkit"
 requires-python = ">= 3.10"
 version = "0.1.0"
@@ -17,6 +17,8 @@ platforms = ["osx-arm64"]
 tabkit = { path = ".", editable = true }
 
 [tool.pixi.tasks]
+test = "OPENML_API_KEY=test OPENML_CACHE_DIR=/tmp/tabkit_pytest_cache pytest"
+
 
 [tool.pixi.dependencies]
 python = "3.10.*"
