use custom test with environment variables

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
           cache: true
           pixi-version: v0.53.0
       - name: Run tests
-        run: pixi run pytest
+        run: pixi run test
