--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "table-toolkit"
-version = "2025.10.15"
+version = "2025.10.15a"
 description = "A Python library for consistent preprocessing of tabular data with automatic type inference, caching, and stratified splitting"
 readme = "README.md"
 requires-python = ">= 3.10"
